# PDFProc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
SQLiteContainer/: docker-compose.yaml
SQLiteContainer/sqlite_volume/: TestDataBase.db
